--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "my-nodejs-app",
   "version": "1.0.0",
+  "description": "A simple Node.js app",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "build": "echo 'No build step necessary'"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
     "express": "^4.19.2"
-  }
+  },
+  "author": "",
+  "license": "ISC"
 }
+
